cabal-version:      2.4
name:               lens-hs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Neil Ashford
maintainer:         me@neilashford.dev

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable lens-hs
    main-is:          Main.hs

    other-modules:    Arguments, UserLens

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.2.0,
        aeson >= 1.5.6,
        aeson-pretty >= 0.8.8,
        bytestring >= 0.10.12,
        lens >= 5.0.1,
        lens-aeson >= 1.1.1,
        parsec >= 3.1.14,
        text >= 1.2.3.2,
        vector >= 0.12.3
    hs-source-dirs:   app
    default-language: Haskell2010
